# minecraft-clone

./: .env.example  .gitignore  BLUEPRINT.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/constants/: blocks.rs  items.rs  mod.rs  world.rs
crates/shared/src/protocol/: chunk.rs  codec.rs  mod.rs  packets.rs  states.rs
crates/shared/src/types/: block.rs  inventory.rs  mod.rs  player.rs  world.rs
crates/shared/src/utils/: aabb.rs  math.rs  mod.rs  random.rs
crates/shared/src/world/: biome.rs  chunk.rs  mod.rs
crates/shared/src/world/generation/: biome.rs  features.rs  mod.rs  terrain.rs
crates/voxel/: Cargo.toml
crates/voxel/src/: main.rs
crates/voxel/src/engine/: chunk_mesh.rs  mod.rs  time.rs
crates/voxel/src/engine/camera/: mod.rs
crates/voxel/src/engine/physics/: mod.rs
crates/voxel/src/engine/renderer/: mod.rs
crates/voxel/src/engine/world/: mod.rs
crates/voxel/src/game/: inventory.rs  mod.rs  player.rs  terrain.rs
crates/voxel/src/network/: mod.rs
crates/voxel/src/storage/: anvil.rs  mod.rs  player.rs
crates/voxel/src/ui/: hud.rs  menu.rs  mod.rs
docs/: CONTRIBUTING.md  protocol.md
docs/adr/: 001-rust-engine.md  002-ecs-architecture.md  003-world-chunk-system.md  004-network-protocol.md  005-wgpu-renderer.md  006-postgres-persistence.md  007-go-microservices.md  008-jwt-auth.md
