[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/voxel",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VoxelCraft Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
tracing = "0.1"

# Math
glam = { version = "0.27", features = ["serde"] }

# Rendering
winit = "0.30"
wgpu = "0.20"

# Audio
rodio = "0.19"

# World generation
noise = "0.9"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Build utilities
vergen = { version = "9.0", features = ["git"] }
