[package]
name = "voxel-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = { version = "1.0", features = ["std"] }

[dev-dependencies]
criterion = "0.5"
