[package]
name = "voxel"
version.workspace = true
edition.workspace = true

[dependencies]
voxel-shared = { path = "../shared" }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glam = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
rodio = { workspace = true }
noise = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
bytemuck = { version = "1.0", features = ["derive"] }

[features]
default = ["client"]
client = []
server = []
